fix(scraper): update class to support simulated driver with MagicMocks; improve test coverage

--- a/pytest.ini
+++ b/pytest.ini
@@ -14,3 +14,9 @@ python_classes = Test*
 
 # Especifica el patrón de los nombres de funciones que contienen tests
 python_functions = test_*
+
+# Define marcadores personalizados
+markers = e2e: pruebas end-to-end que requieren la apertura del navegador
+
+# Por defecto, no ejecutar pruebas E2E
+addopts = -m "not e2e"  
